--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: ZIMINGZPP Blog
+title: ZimingZpp Blog
 SEOTitle: 
 header-img: img/post-bg-desk.jpg
 email: zimingzpp@gmail.com
@@ -11,7 +11,7 @@ github_repo: "https://github.com/zimingzpp/zimingzpp.github.io.git" # you code r
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
+sidebar-about-description: "别等了, 开始做吧!"
 sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -99,16 +99,16 @@ service-worker: true
 # Friends
 friends: [
     #    {
-    #        title: "WY",
-    #        href: "http://zhengwuyang.com"
+    #        title: "",
+    #        href: ""
     #    },{
-    #        title: "简书·BY",
-    #        href: "http://www.jianshu.com/u/e71990ada2fd"
+    #        title: "",
+    #        href: ""
     #    },{
-    #        title: "Apple",
-    #        href: "https://apple.com"
+    #        title: "",
+    #        href: ""
     #    },{
-    #        title: "Apple Developer",
-    #        href: "https://developer.apple.com/"
+    #        title: "",
+    #        href: ""
     #    }
 ]
